--- a/demo/JavaScript高级程序设计/03-语言基础/index.html
+++ b/demo/JavaScript高级程序设计/03-语言基础/index.html
@@ -8,106 +8,24 @@
   </head>
   <body>
     <script>
-      /**
-      if (true) {
-        var name = "Jack";
-        let age = 26;
-      }
-      console.log(name); // Jack
-      console.log(age); // 报错，ReferenceError: age is not defined
-
-            function test() {
-        var message = "hi"; // 局部变量，函数调用后就会被销毁
-      }
-      test();
-      console.log(message); // 报错 message is not defined
-
-      var name;
-
-      let name; //
-      let age; // SyntaxError: Identifier 'age' has already been declared
-
-      let age = 26;
-      if (true) {
-        let age = 30;
-        console.log(age); // 30
-      }
-      console.log(age); // 30
-      */
-      // console.log(foo);
-
-      // var foo = 2;
-      // var foo = function () {
-      //   console.log(2);
-      // };
-      // function foo() {
-      //   console.log(1);
-      // }
-
-      // console.log(age); // undefined
-      // let age = 26;
-
-      // var name = "Jack";
-      // console.log(window.name); // Jack
-
-      // let age = 26;
-      // console.log(window.age);  // undefined
-
-      // let age = 30;
-    </script>
-
-    <!-- <script>
-      var name = "Nicholas";
-      let age = 26;
-    </script>
-
-
-    <script>
-      var name = "Matt";
-      let age = 36;
-
-      console.log(name);
-      console.log(age);
-    </script> -->
-
-    <script>
-      var a = [0];
-      let c = 1;
-      {
-        let b = function () {};
-        console.dir(b);
+      function add(num) {
+        num += 10;
+        return num;
       }
 
-      // var iArr = [];
-      // for (var i = 0; i < 5; i++) {
-      //   iArr[i] = function () {
-      //     console.log(i);
-      //   };
-      // }
-      // console.dir(iArr[2]);
+      let count = 20;
+      let result = add(count);
+      console.log(count); // 20，没有改变，如果是按引用传递的话应该是30
+      console.log(result); // 30
 
-      // let jArr = [];
-      // for (let j = 0; j < 5; j++) {
-      //   jArr[j] = function () {
-      //     console.log(j);
-      //   };
-      // }
-      // console.dir(jArr[2]);
+      function setAge(obj) {
+        obj.age = 26;
+      }
+      let person = new Object();
+      setAge(person);
+      console.log(person.age); // 26，对象复制的是指针，所以改变其中一个对象也会反映到另一个对象上。
 
-      // function f1() {
-      //   let n = 5;
-      //   if (true) {
-      //     let n = 10;
-      //   }
-      //   console.log(n); // 5
-      // }
-      // f1();
-
-      // const foo = Object.freeze({});
-
-      // // 常规模式时，下面一行不起作用；
-      // // 严格模式时，该行会报错
-      // foo.prop = 123;
+      
     </script>
   </body>
 </html>
